--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="text">
           <h2>Quienes Somos</h2>
           <p>Soy Sue Ellen Rybertt Fuster, estilista y cosmetóloga de profesión, con más de 20 años de trayectoria. Actualmente, tengo mi propio salón, ubicado en la Ciudad de la Cruz, en la 5ª región.</p>
-          <p>Me especializo en cosmetología y peluquería, habiendo recibido formación en diversos institutos de prestigio. Mi pasión es realzar la belleza natural de cada cliente.</p>
+          <p>Me especializo en cosmetología y peluquería, Estudié cosmetología en el instituto Amalia Braniff, y me capacité en el instituto Levinia Manfredini, Dr. Fontboté, soy estilista en el instituto Pichara. Mi pasión es realzar la belleza natural de cada cliente.</p>
         </div>
       </div>
     </section>
