--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <a href="#servicios">Servicios</a>
         <a href="https://api.whatsapp.com/send?phone=56985158556" target="_blank">Reserva Tu Hora</a>
         <a href="#quienes-somos">Quienes Somos</a>
-        <a class="social-icon" href="https://www.facebook.com/summer.solarium.3/" target="_blank">
+        <a class="social-icon" href="https://www.facebook.com/PeluSueRybertt" target="_blank">
           <img src="https://i.ibb.co/1JTDX1Xq/Facebook-logo-square-png.webp" alt="Facebook">
         </a>
-        <a class="social-icon" href="https://www.instagram.com/summersdb_sue/" target="_blank">
+        <a class="social-icon" href="https://www.instagram.com/suerybertt_srsalon/" target="_blank">
           <img src="https://i.ibb.co/YTJZgcgK/Instagram-Logo-2016.png" alt="Instagram">
         </a>
       </nav>
@@ -108,10 +108,10 @@
     <div class="container">
       <p>&copy; 2025 Sue Rybertt Salón</p>
       <div class="social-media">
-        <a href="https://www.facebook.com/summer.solarium.3/" target="_blank">
+        <a href="https://www.facebook.com/PeluSueRybertt" target="_blank">
           <img src="https://i.ibb.co/1JTDX1Xq/Facebook-logo-square-png.webp" alt="Facebook">
         </a>
-        <a href="https://www.instagram.com/summersdb_sue/" target="_blank">
+        <a href="https://www.instagram.com/suerybertt_srsalon/" target="_blank">
           <img src="https://i.ibb.co/YTJZgcgK/Instagram-Logo-2016.png" alt="Instagram">
         </a>
       </div>
